xedoc-rs/tui-composer/src/bottom_pane/snapshots/xedoc_tui_composer__bottom_pane__chat_composer__tests__mention_popup_type_prefixes.snap
---
source: tui-composer/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────╮"
"│❯ $goog                                                               │"
"│                                                                      │"
"│                                                                      │"
"╰──────────────────────────────────────────────────────────────────────╯"
"  Google Calendar  [Plugin] Connect Google Calendar for scheduling, ava…"
"  Google Calendar  [Skill] Find availability and plan event changes     "
"                                                                        "
"  Press enter to insert or esc to close                                 "
